[package]
name = "rissue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
mime = "0.3"
sqlx = {version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"]}
serde = {version = "1.0", features = ["derive"]}
jsonwebtoken = "9"
sha2 = "0.10"
base64ct = {version = "1.6", features = ["alloc"]}
chrono = "0.4"
